apps/ai/envoy-ai-gateway/templates/assisant-hostname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assistant
spec:
  type: ExternalName
  externalName: ai-gateway.envoy-ai-gateway.svc.cluster.local
