apps/ai/envoy-ai-gateway/templates/embedding-hostname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embed
spec:
  type: ExternalName
  externalName: ai-gateway.envoy-ai-gateway.svc.cluster.local
